--- a/templates/admin.html
+++ b/templates/admin.html
@@ -33,7 +33,7 @@
 
 
 <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">Company name</a>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">TROC</a>
     <ul class="navbar-nav flex-row d-md-none">
         <li class="nav-item text-nowrap">
             <button class="nav-link px-3 text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
                     </ul>
 
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
-                        <span>Annonce</span>
+                        <span>Announcements</span>
                         <a class="link-secondary" href="#" aria-label="Add a new report">
                             <svg class="bi"><use xlink:href="#plus-circle"/></svg>
                         </a>
@@ -238,10 +238,10 @@
 <div class="container">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-around border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Legal Information</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Terms & Conditions of Sale</a></li>
         </ul>
-        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+        <p class="text-center text-body-secondary">© 2025 TROC, Inc</p>
     </footer>
 </div>
 <script src="../assets/bootstrap/bootstrap.min.js"></script>
