--- a/templates/frontend/login.html
+++ b/templates/frontend/login.html
@@ -8,9 +8,9 @@
     <meta name="generator" content="Hugo 0.122.0">
     <title>Signin Template · Bootstrap v5.3</title>
 
-    <link rel="stylesheet" href="../assets/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/bootstrap/bootstrap.min.css">
     <!-- Custom styles for this template -->
-    <link href="../assets/sign-in.css" rel="stylesheet">
+    <link href="../../assets/sign-in.css" rel="stylesheet">
 </head>
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
 <main class="form-signin w-100 m-auto">
@@ -29,7 +29,7 @@
         <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
     </form>
 </main>
-<script src="../assets/bootstrap/bootstrap.min.js"></script>
+<script src="../../assets/bootstrap/bootstrap.min.js"></script>
 
 </body>
 </html>
