--- a/templates/frontend/frontend.html
+++ b/templates/frontend/frontend.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>Blog Template · Bootstrap v5.3</title>
+    <title>TROC</title>
     <link href="../../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
+<!-- header -->
 <header class="p-3 mb-3 border-bottom">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -33,6 +34,8 @@
         </div>
     </div>
 </header>
+
+<!-- main section -->
 <main class="main">
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
@@ -132,8 +135,10 @@
         </div>
     </div>
 </main>
+
 <div class="b-example-divider"></div>
 <div class="container">
+<!-- footer -->
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
@@ -147,7 +152,7 @@
 </div>
 
 <script src="../../assets/bootstrap/bootstrap.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<!-- icons -->
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
     <symbol id="check2" viewBox="0 0 16 16">
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
