--- a/templates/admin.html
+++ b/templates/admin.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-
+<!-- Header start -->
 <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">TROC</a>
     <ul class="navbar-nav flex-row d-md-none">
@@ -42,6 +42,7 @@
         </li>
     </ul>
 </header>
+<!--Header end -->
 
 <div class="container-fluid ">
     <div class="row mb-3">
@@ -91,7 +92,6 @@
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">Dashboard</h1>
             </div>
-            <!--Header end -->
 
 <!--            Content start -->
             <!--            Alerts start -->
