--- a/templates/frontend/register.html
+++ b/templates/frontend/register.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.122.0">
-    <title>Signin Template · Bootstrap v5.3</title>
+    <title>Registration Template · Bootstrap v5.3</title>
 
     <link rel="stylesheet" href="../../assets/bootstrap/bootstrap.min.css">
     <!-- Custom styles for this template -->
